navbar home button no longer covered by an other div

--- a/treasurehuntweb/src/styles/globals.css
+++ b/treasurehuntweb/src/styles/globals.css
@@ -86,3 +86,7 @@
     scrollbar-width: none; /* Firefox */
   }
 }
+
+html {
+  font-size: 100%;
+}
